--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.4.0",
+    "react-markdown": "^8.0.3",
     "typescript": "4.8.4"
   }
 }
