--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react-dom": "18.0.8",
     "firebase": "^9.13.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.39.1",
     "react-hot-toast": "^2.4.0",
     "react-markdown": "^8.0.3",
     "typescript": "4.8.4"
